--- a/views/users/list.hbs
+++ b/views/users/list.hbs
@@ -5,7 +5,7 @@
     <li> {{ this.username }}
 
       {{!-- uncomment after you create user details page --}}
-      {{!-- <a href="/users/{{this._id}}/posts">Read posts</a> --}}
+      <a href="/users/{{this._id}}/posts">Read posts</a>
     </li>
   {{/each}}
 </ul>
