--- a/views/users/details.hbs
+++ b/views/users/details.hbs
@@ -1,1 +1,10 @@
 <h2>User's posts</h2>
+
+<h3>User {{username}} has the following posts:</h3>
+
+<ol>
+  {{#each posts}}
+    <li>{{title}}</li>
+    <a href="/post-detail/{{_id}}"></a>
+  {{/each}}
+</ol>
